--- a/build.gradle
+++ b/build.gradle
@@ -3,58 +3,22 @@ subprojects {
 
     repositories {
         mavenCentral()
-        mavenLocal()
     }
 
     dependencies {
+        compile group: 'org.springframework', name: 'spring-context', version: '4.3.7.RELEASE'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 }
 
-apply plugin: 'gradle-one-jar'
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
-    }
-}
-
-project(':common') {
-    dependencies {
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-    }
-}
-
-project(':server-core') {    dependencies {
-        compile project(':common')
-    }
-}
-
-project(':server-ui') {
-    dependencies {
-        compile project(':common')
-    }
-}
-
 project(':tracker-core') {
-    apply plugin: 'java-library-distribution'
-    apply plugin: 'gradle-one-jar'
-
     dependencies {
-        compile project(':common')
-    }
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
 
-    task fatJar(type: OneJar) {
-        mainClass = 'tntshk.tracker.Main'
+        compile group: 'de.micromata.jak', name: 'JavaAPIforKml', version: '2.2.0'
     }
 }
 
-project(':tracker-ui') {
-    dependencies {
-        compile project(':common')
-    }
-}
