--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,48 @@ subprojects {
     }
 
     dependencies {
-        compile group: 'org.springframework', name: 'spring-context', version: '4.3.7.RELEASE'
+        compile group: 'org.springframework', name: 'spring-context', version: '5.3.4'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
+        compile group: 'org.springframework', name: 'spring-web', version: '5.3.4'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.3'
+        compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.4.3'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.3'
     }
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.3")
+    }
+}
+
+project(':common') {
+
 }
 
 project(':tracker-core') {
-    dependencies {
-        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
+    apply plugin: 'org.springframework.boot'
 
+    dependencies {
+        compile group: 'commons-io', name: 'commons-io', version: '2.5'
         compile group: 'de.micromata.jak', name: 'JavaAPIforKml', version: '2.2.0'
+        compile project(':common')
     }
 }
+
+project(':server-core') {
+    apply plugin: 'org.springframework.boot'
+
+    dependencies {
+        compile project(':common')
+    }
+}
+
 
