--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,12 @@ subprojects {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
+
         compile group: 'org.springframework', name: 'spring-web', version: '5.3.4'
         compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.3'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.3'
         compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.4.3'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.4.3'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.3'
